# drf_auth_example

./: .env_example  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: admin.py  middleware.py  models.py  urls.py
api/migrations/: 0001_initial.py
api/tests/: test_views.py
auth_project/: db.sqlite3  manage.py  requirements.txt
auth_project/api/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
auth_project/api/auth/: db.py  decorators.py  exceptions.py  fake_db.py  headers.py  schemas.py  serializers.py  token_manager.py  user_auth.py  utils.py
auth_project/api/migrations/: 0002_role_user.py  0003_migration_data.py  0004_alter_user_options.py  0005_user_email.py  0006_category_remove_book_author_recipe_delete_author_and_more.py  0007_token.py
auth_project/api/tests/: conftest.py  test_books_views.py  test_recipes_views.py  test_user_views.py  test_views.py
auth_project/auth_project/: settings.py  urls.py
drf_example/: asgi.py  settings.py  urls.py  wsgi.py
